avoid herky jerky scrollbar behavior

--- a/css/overlay.css
+++ b/css/overlay.css
@@ -339,3 +339,8 @@
 .guide-bottom {
 	bottom: 0;
 }
+
+
+body {
+	overflow-y: scroll; /* avoid herky jerky scrollbar behavior */
+}
